CODEOWNERS: consistent formatting

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,26 +4,43 @@
 
 # Spec maintainers own each individual spec.
 age.md                  @FiloSottile
+age/                    @FiloSottile
+
 age-plugin.md           @str4d
+age-plugin/             @str4d
+
 chacha8rand.md          @FiloSottile @rsc
 chacha8rand/            @FiloSottile @rsc
+
 https-bastion.md        @FiloSottile @rgdd
 https-bastion/          @FiloSottile @rgdd
+
 jq255.md                @pornin
 jq255/                  @pornin
+
 poseidon-*.md           @str4d
+poseidon-*/             @str4d
+
 signed-note.md          @FiloSottile @rsc
 signed-note/            @FiloSottile @rsc
+
 streaming-encryption.md @FiloSottile @str4d
 streaming-encryption/   @FiloSottile @str4d
+
 sunlight.md             @FiloSottile
 sunlight/               @FiloSottile
+
 tlog-checkpoint.md      @FiloSottile @rgdd
 tlog-checkpoint/        @FiloSottile @rgdd
+
 tlog-cosignature.md     @FiloSottile @rgdd
 tlog-cosignature/       @FiloSottile @rgdd
+
 tlog-witness.md         @FiloSottile @rgdd
 tlog-witness/           @FiloSottile @rgdd
+
 vrf-r255.md             @FiloSottile
+vrf-r255/               @FiloSottile
+
 XAES-256-GCM.md         @FiloSottile
 XAES-256-GCM/           @FiloSottile
