--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,8 +9,8 @@ age/                    @FiloSottile
 age-plugin.md           @str4d
 age-plugin/             @str4d
 
-chacha8rand.md          @FiloSottile @rsc
-chacha8rand/            @FiloSottile @rsc
+chacha8rand.md          @FiloSottile
+chacha8rand/            @FiloSottile
 
 https-bastion.md        @FiloSottile @rgdd
 https-bastion/          @FiloSottile @rgdd
@@ -21,8 +21,8 @@ jq255/                  @pornin
 poseidon-*.md           @str4d
 poseidon-*/             @str4d
 
-signed-note.md          @FiloSottile @rsc
-signed-note/            @FiloSottile @rsc
+signed-note.md          @FiloSottile
+signed-note/            @FiloSottile
 
 streaming-encryption.md @FiloSottile @str4d
 streaming-encryption/   @FiloSottile @str4d
