CODEOWNERS: add tlog-tiles
Closes #77

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -36,6 +36,9 @@ tlog-checkpoint/        @mhutchinson @FiloSottile @rgdd
 tlog-cosignature.md     @AlCutter @FiloSottile @rgdd
 tlog-cosignature/       @AlCutter @FiloSottile @rgdd
 
+tlog-tiles.md           @AlCutter @mhutchinson @FiloSottile
+tlog-tiles/             @AlCutter @mhutchinson @FiloSottile
+
 tlog-witness.md         @FiloSottile @rgdd
 tlog-witness/           @FiloSottile @rgdd
 
