BLAKE3: new spec
Closes #101

--- a/.github/policy.yml
+++ b/.github/policy.yml
@@ -12,6 +12,9 @@ policy:
           - the age-plugin maintainers have authored relevant changes
           - the age-plugin maintainers have approved relevant changes
         - or:
+          - the BLAKE3 maintainers have authored relevant changes
+          - the BLAKE3 maintainers have approved relevant changes
+        - or:
           - the chacha8rand maintainers have authored relevant changes
           - the chacha8rand maintainers have approved relevant changes
         - or:
@@ -108,6 +111,33 @@ approval_rules:
       has_author_in:
         teams:
           - "C2SP/age-plugin"
+    requires:
+      count: 0
+
+  - name: the BLAKE3 maintainers have approved relevant changes
+    if:
+      changed_files:
+        paths:
+          - "^BLAKE3\\.md$"
+          - "^BLAKE3/.*$"
+    requires:
+      count: 1
+      teams:
+        - "C2SP/BLAKE3"
+    options:
+      allow_contributor: true
+      methods:
+        comments: [] # disable comment-based approval
+
+  - name: the BLAKE3 maintainers have authored relevant changes
+    if:
+      changed_files:
+        paths:
+          - "^BLAKE3\\.md$"
+          - "^BLAKE3/.*$"
+      has_author_in:
+        teams:
+          - "C2SP/BLAKE3"
     requires:
       count: 0
 
