tlog-mirror: new specification
Closes #133

--- a/.github/policy.yml
+++ b/.github/policy.yml
@@ -36,6 +36,9 @@ policy:
           - the tlog-cosignature maintainers have authored relevant changes
           - the tlog-cosignature maintainers have approved relevant changes
         - or:
+          - the tlog-mirror maintainers have authored relevant changes
+          - the tlog-mirror maintainers have approved relevant changes
+        - or:
           - the tlog-tiles maintainers have authored relevant changes
           - the tlog-tiles maintainers have approved relevant changes
         - or:
@@ -327,6 +330,33 @@ approval_rules:
       has_author_in:
         teams:
           - "C2SP/tlog-cosignature"
+    requires:
+      count: 0
+
+  - name: the tlog-mirror maintainers have approved relevant changes
+    if:
+      changed_files:
+        paths:
+          - "^tlog-mirror\\.md$"
+          - "^tlog-mirror/.*$"
+    requires:
+      count: 1
+      teams:
+        - "C2SP/tlog-mirror"
+    options:
+      allow_contributor: true
+      methods:
+        comments: [] # disable comment-based approval
+
+  - name: the tlog-mirror maintainers have authored relevant changes
+    if:
+      changed_files:
+        paths:
+          - "^tlog-mirror\\.md$"
+          - "^tlog-mirror/.*$"
+      has_author_in:
+        teams:
+          - "C2SP/tlog-mirror"
     requires:
       count: 0
 
