.github: bypass branch protection in update-maintainers.yml
https://github.com/C2SP/C2SP/actions/runs/15901866540/job/44846590120

--- a/.github/workflows/update-maintainers.yml
+++ b/.github/workflows/update-maintainers.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
@@ -34,10 +32,10 @@ jobs:
   commit:
     needs: generate
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.MAINTAINERS_DEPLOY_KEY }}
       - name: Download generated file
         uses: actions/download-artifact@v4
         with:
